--- a/psalg/psalg/CMakeLists.txt
+++ b/psalg/psalg/CMakeLists.txt
@@ -36,10 +36,10 @@ target_include_directories(psalg PUBLIC
 
 find_library(CURL_LIBRARY curl PATH $ENV{CONDA_PREFIX}/lib)
 
-message(STATUS "XXXXXX: CMAKE_CURRENT_SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}")
-message(STATUS "XXXXXX: CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}")
-message(STATUS "XXXXXX: CURL_LIBRARY=${CURL_LIBRARY}")
-message(STATUS "XXXXXX: CONDA_PREFIX=$ENV{CONDA_PREFIX}")
+message(STATUS "psalg/CMakeLists: CMAKE_CURRENT_SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}")
+message(STATUS "psalg/CMakeLists: CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}")
+message(STATUS "psalg/CMakeLists: CURL_LIBRARY=${CURL_LIBRARY}")
+message(STATUS "psalg/CMakeLists: CONDA_PREFIX=$ENV{CONDA_PREFIX}")
 
 # this is necessary only on RHEL6 where we need to pick up clock_gettime
 target_link_libraries(psalg
