progress on the timing system detector

--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -3,6 +3,7 @@ find_package(PythonLibs REQUIRED)
 add_executable(drp
     PGPReader.cc
     DrpApp.cc
+    XpmDetector.cc
     AreaDetector.cc
     Digitizer.cc
     TimingSystem.cc
