--- a/psdaq/psdaq/cnf/lab3-weninc.cnf
+++ b/psdaq/psdaq/cnf/lab3-weninc.cnf
@@ -11,22 +11,8 @@ ip_addr = '10.0.'+shelf
 collect_host = 'drp-tst-acc06'
 rtmon_host = 'psmetric04'
 
-# procmgr FLAGS: <port number> static port number to keep executable
-#                              running across multiple start/stop commands.
-#                "X" open xterm
-#                "s" send signal to child when stopping
-#
-# HOST       UNIQUEID      FLAGS  COMMAND+ARGS
-# list of processes to run
-#   required fields: id, cmd
-#   optional fields: host, port, flags, conda, env, rtprio
-#     flags:
-#        'x' or 'X'  -> xterm: open small or large xterm for process console
-#        's'         -> stop: sends ctrl-c to process
-#        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
-
 # -o /ffb01/weninc
-drp_cmd = 'drp -D AreaDetector -l 0xf -d /dev/datadev_0 -C '+collect_host
+drp_cmd = 'drp -D AreaDetector -l 0xf -d /dev/datadev_0 -o /ffb01/weninc -C ' + collect_host
 
 procmgr_config = [
  { id:'partca-'+platform ,flags:'s', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
@@ -38,16 +24,13 @@ procmgr_config = [
 
  { host: 'drp-tst-dev001', id:'teb1', flags:'sxpu', conda:conda_rel, cmd:'teb -Z '+rtmon_host+' -C '+collect_host},
 
- #{ host: 'drp-tst-dev002', id:'drp2', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev003', id:'drp3', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev002', id:'drp2', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev003', id:'drp3', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
  #{ host: 'drp-tst-dev004', id:'drp4', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
  #{ host: 'drp-tst-dev005', id:'drp5', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
-
  #{ host: 'drp-tst-dev007', id:'drp7', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
-
  #{ host: 'drp-tst-dev009', id:'drp9', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
  #{ host: 'drp-tst-dev011', id:'drp11', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
-
  #{ host: 'drp-tst-dev012', id:'drp12', flags:'sxpu', conda:conda_rel, cmd: drp_cmd }
  #{ host: 'drp-tst-dev013', id:'drp13', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
  #{ host: 'drp-tst-dev014', id:'drp14', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
