--- a/psdaq/psdaq/eb/tstEb.cnf
+++ b/psdaq/psdaq/eb/tstEb.cnf
@@ -22,7 +22,6 @@ conda_env = getRelEnvString()
 
 partition = 'Test'
 col_node  = 'drp-tst-acc06'
-rtm_node  = 'psmetric04'
 headless  = False
 if headless:
   node_flags = 'sp'
@@ -82,9 +81,9 @@ if num_mon and len(mon_nodes) is 0:
 
 mgr_cmd = 'procstat -t ' + username + ' -e0 -n none p' + platform+'.cnf.last'
 col_cmd = 'collection -v'
-mon_cmd = 'monReqServer -C ' + col_node + ' -Z ' + rtm_node + ' -P ' + partition + ' -d -q 8'
-seg_cmd = 'ctrb -C ' + col_node + ' -Z ' + rtm_node
-evt_cmd = 'teb -C ' + col_node + ' -Z ' + rtm_node
+mon_cmd = 'monReqServer -C ' + col_node + ' -P ' + partition + ' -d -q 8'
+seg_cmd = 'ctrb -C ' + col_node
+evt_cmd = 'teb -C ' + col_node
 
 procmgr_config = []
 
