--- a/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
@@ -7,7 +7,6 @@ epics_env = 'EPICS_PVA_ADDR_LIST=172.21.42.255'
 conda_rel = 'ps-2.0.1'
 
 collect_host = 'drp-tst-acc06'
-rtmon_host = 'psmetric04'
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
@@ -27,8 +26,8 @@ procmgr_config = [
  { host: collect_host,    id:'collection', flags:'sp', conda:conda_rel, env:epics_env, cmd:'collection -v -P TMO -B DAQ:LAB2 -x 2'},
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
  # trigger event builder
- { host: 'drp-tst-dev001', id:'teb1', flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host+' -Z '+rtmon_host},
+ { host: 'drp-tst-dev001', id:'teb1', flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
  # cameras
- { host: 'drp-tst-dev011', id:'ctrb1', flags:'pu', conda:conda_rel, cmd:'ctrb -1 8 -2 9 -C '+collect_host+' -Z '+rtmon_host},
+ { host: 'drp-tst-dev011', id:'ctrb1', flags:'pu', conda:conda_rel, cmd:'ctrb -1 8 -2 9 -C '+collect_host},
 #{ host: 'drp-tst-dev012', id:'drp1', flags:'spu', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -o /tmp -C '+collect_host}
 ]
