Implement default(detector-independent) NDArray calibration access methods in CalibPars using WEBDB

--- a/psalg/psalg/calib/CMakeLists.txt
+++ b/psalg/psalg/calib/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(calib SHARED
     src/AreaDetectorTypes.cc
     src/CalibPars.cc
     src/CalibParsDB.cc
+    src/CalibParsDBTypes.cc
     src/CalibParsDBWeb.cc
     src/CalibParsDBStore.cc
     src/CalibParsEpix100a.cc
