change how aliases are created in drp.  clean up database connections.  iterate on ts detector.

--- a/psdaq/psdaq/cnf/lab3-hsd.cnf
+++ b/psdaq/psdaq/cnf/lab3-hsd.cnf
@@ -31,7 +31,7 @@ procmgr_config = [
  {                        id:'xpmca'  ,flags:'', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:'+shelf},
  {                        id:'hsdca', flags:'', conda:conda_rel, env:epics_env, cmd:'hsdca DAQ:LAB2:HSD:DEV02'},
  { host: 'drp-tst-dev002', id:'teb1', flags:'sxpu', conda:conda_rel, cmd:'teb -C '+collect_host},
-{ host: 'drp-tst-dev024', id:'hsddrp', flags:'xp', conda:conda_rel, cmd:'drp -o /ffb01/tstopr -l 0x1 -D Digitizer -d /dev/datadev_0 -C '+collect_host + ' -u hsd0'},
- { host: collect_host, id:'Collection', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'collection -v -B DAQ:LAB2 -x 2'},
+{ host: 'drp-tst-dev024', id:'hsddrp', flags:'xp', conda:conda_rel, cmd:'drp -o /ffb01/tstopr -l 0x1 -D Digitizer -d /dev/datadev_0 -C '+collect_host + ' -n hsd'},
+ { host: collect_host, id:'Collection', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'collection -v -B DAQ:LAB2 -x 2 -P TMO'},
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 ]
