--- a/psdaq/psdaq/cnf/lab3-caf-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-caf-cam.cnf
@@ -22,18 +22,15 @@ collect_host = 'drp-tst-acc06'
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- {                        id:'partca-'+platform, conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
+ {                        id:'partca-1', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:1'},
+ {                        id:'partca-5', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:5'},
  {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
- {                        id:'modca', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:'+shelf},
- {                        id:'deadca-'+platform, conda:conda_rel, env:epics_env, cmd:'deadca DAQ:LAB2 '+platform+' '+shelf},
- #{                        id:'dtica', conda:conda_rel, env:epics_env, cmd:'dtica DAQ:LAB2:DTI:'+shelf},
- { host: collect_host,    id:'collection', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'collection -v -P CAF -B DAQ:LAB2 -x 2'},
+ { host: collect_host,    id:'control', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'collection -v -P TMO -B DAQ:LAB2 -x 2'},
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
  # trigger event builder
  { host: 'drp-tst-dev001', id:'teb1', flags:'xpu', conda:conda_rel, cmd:'teb -C '+collect_host},
  # ctrb
- { host: 'drp-tst-dev007', id:'ctrb', flags:'xpu', conda:conda_rel, cmd:'ctrb -C '+collect_host},
+#{ host: 'drp-tst-dev007', id:'ctrb', flags:'xpu', conda:conda_rel, cmd:'ctrb -C '+collect_host},
  # drp
- { host: 'drp-tst-dev009', id:'drp0', flags:'sxpu', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -o /tmp -C '+collect_host},
- { host: 'drp-tst-dev008', id:'drp1', flags:'sxpu', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -o /tmp -C '+collect_host}
+ { host: 'drp-tst-dev008', id:'cam', flags:'sxp', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -n cam -o /tmp -C '+collect_host}
 ]
