adopt from lcls1 GeometryObject/Access

--- a/psalg/psalg/geometry/CMakeLists.txt
+++ b/psalg/psalg/geometry/CMakeLists.txt
@@ -1,11 +1,11 @@
 add_library(geometry SHARED
-    #src/GeometryAccess.cc
-    #src/GeometryObject.cc
     src/SegGeometry.cc
     src/SegGeometryCspad2x1V1.cc
     src/SegGeometryEpix100V1.cc
     src/SegGeometryEpix10kaV1.cc
     src/SegGeometryMatrixV1.cc
+    src/GeometryObject.cc
+    src/GeometryAccess.cc
 )
 
 target_include_directories(geometry PUBLIC
@@ -18,18 +18,20 @@ find_library(CURL_LIBRARY curl PATH $ENV{CONDA_PREFIX}/lib)
 
 target_link_libraries(geometry
     xtcdata::xtc
+    calib
     ${CURL_LIBRARY}
 )
 
 install(FILES
-    #GeometryAccess.hh
-    #GeometryObject.hh
     SegGeometryCspad2x1V1.hh
     SegGeometryEpix100V1.hh
     SegGeometryEpix10kaV1.hh
     SegGeometry.hh
     SegGeometryMatrixV1.hh
     SegGeometryStore.hh
+    GlobalMethods.hh
+    GeometryObject.hh
+    GeometryAccess.hh
     DESTINATION include/psalg/geometry
 )
 
