--- a/psdaq/psdaq/cnf/lab3-base.cnf
+++ b/psdaq/psdaq/cnf/lab3-base.cnf
@@ -40,6 +40,11 @@ procmgr_config = [
  { host: epics_host,  id:'modcas-1', port:'29460', flags:'s', conda:conda_rel, env:epics_env, cmd:'modcas -P DAQ:LAB2:XPM:1'},
  { host: epics_host,  id:'xpmioc-1', port:'29461', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmPVs -a 10.0.1.103 -P DAQ:LAB2'},
 
+## BLD service
+ { host: epics_host,  id:'hpsdbuscas', port:'29463', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsdbuscas -P DAQ:LAB2:HPSEX'},
+ { host: epics_host,  id:'bldcas'    , port:'29464', flags:'s', conda:conda_rel, env:epics_env, cmd:'bldcas -P DAQ:LAB2'},
+ { host: 'drp-tst-dev021',  id:'hpsbldsvc' , port:'29465', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsBldServer -a 10.0.3.104 -i eno1 -n DAQ:LAB2:HPSEX -p 0x3c0'},
+
 ## procstat
  {                    id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
   ]
