--- a/psdaq/psdaq/cnf/lab3-base.cnf
+++ b/psdaq/psdaq/cnf/lab3-base.cnf
@@ -43,7 +43,7 @@ procmgr_config = [
 ## BLD service
  { host: epics_host,  id:'hpsdbuscas', port:'29463', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsdbuscas -P DAQ:LAB2:HPSEX'},
  { host: epics_host,  id:'bldcas'    , port:'29464', flags:'s', conda:conda_rel, env:epics_env, cmd:'bldcas -P DAQ:LAB2'},
- { host: 'drp-tst-dev021',  id:'hpsbldsvc' , port:'29465', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsBldServer -a 10.0.3.104 -i eno1 -n DAQ:LAB2:HPSEX -p 0x3c0'},
+ { host: 'drp-tst-dev021',  id:'hpsbldsvc' , port:'29465', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsBldServer -a 10.0.3.104 -i eno1 -n DAQ:LAB2:HPSEX -p 0x1e0'},
 
 ## procstat
  {                    id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
