--- a/psdaq/psdaq/cnf/lab3-caf-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-caf-cam.cnf
@@ -25,7 +25,7 @@ procmgr_config = [
  {                        id:'partca-1', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:1'},
  {                        id:'partca-5', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:5'},
  {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
- { host: collect_host,    id:'control', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'collection -v -P TMO -B DAQ:LAB2 -x 2'},
+ { host: collect_host,    id:'control', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'control -v -P TMO -B DAQ:LAB2 -x 2'},
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
  # trigger event builder
  { host: 'drp-tst-dev001', id:'teb1', flags:'xpu', conda:conda_rel, cmd:'teb -C '+collect_host},
