improve flexibility of psalg/geometry/GeometryAccess, multiple cosmetic changes

--- a/psalg/psalg/calib/CMakeLists.txt
+++ b/psalg/psalg/calib/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(calib SHARED
     src/ArrayIO.cc
+    src/CalibParsTypes.cc
     src/AreaDetectorTypes.cc
     src/CalibPars.cc
     src/CalibParsDB.cc
