--- a/psdaq/psdaq/cnf/lab3-hsd.cnf
+++ b/psdaq/psdaq/cnf/lab3-hsd.cnf
@@ -32,6 +32,6 @@ procmgr_config = [
  {                        id:'hsdca', flags:'', conda:conda_rel, env:epics_env, cmd:'hsdca DAQ:LAB2:HSD:DEV02'},
  { host: 'drp-tst-dev002', id:'teb1', flags:'sxpu', conda:conda_rel, cmd:'teb -C '+collect_host},
 { host: 'drp-tst-dev024', id:'hsddrp', flags:'xp', conda:conda_rel, cmd:'drp -o /ffb01/tstopr -l 0x1 -D Digitizer -d /dev/datadev_0 -C '+collect_host + ' -n hsd'},
- { host: collect_host, id:'control', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'control -v -B DAQ:LAB2 -x 2 -P TMO'},
+ { host: collect_host, id:'control', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P TMO'},
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 ]
