--- a/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
@@ -28,6 +28,7 @@ procmgr_config = [
  # trigger event builder
  { host: 'drp-tst-dev001', id:'teb1', flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
  # cameras
- { host: 'drp-tst-dev011', id:'ctrb1', flags:'pu', conda:conda_rel, cmd:'ctrb -1 8 -2 9 -C '+collect_host},
- { host: 'drp-tst-dev012', id:'drp1', flags:'sp', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -n cam -d /dev/datadev_0 -o /tmp -C '+collect_host}
+ { host: 'drp-tst-dev007', id:'drp007', flags:'sp', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -n cam0 -d /dev/datadev_0 -s0 -o /tmp -C '+collect_host},
+ { host: 'drp-tst-dev011', id:'drp011', flags:'sp', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -n cam1 -d /dev/datadev_0 -s0 -o /tmp -C '+collect_host},
+ { host: 'drp-tst-dev012', id:'drp012', flags:'sp', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -n cam1 -d /dev/datadev_0 -s1 -o /tmp -C '+collect_host}
 ]
