--- a/psalg/psalg/calib/CMakeLists.txt
+++ b/psalg/psalg/calib/CMakeLists.txt
@@ -22,6 +22,8 @@ target_include_directories(calib PUBLIC
 find_library(CURL_LIBRARY curl PATH $ENV{CONDA_PREFIX}/lib)
 
 target_link_libraries(calib
+    utils
+    geometry
     xtcdata::xtc
     ${CURL_LIBRARY}
 )
