--- a/psalg/psalg/shmem/CMakeLists.txt
+++ b/psalg/psalg/shmem/CMakeLists.txt
@@ -1,87 +1,133 @@
-add_library(shmemsrv SHARED
+option(BUILD_SHMEM "Build shmem libraries" ON)
+
+if(BUILD_SHMEM)
+  add_library(shmemsrv SHARED
     XtcMonitorServer.cc
     XtcMonitorMsg.cc
     TransitionCache.cc
     ProcInfo.cc
     XtcRunSet.cc
-)
+  )
 
-add_library(shmemcli SHARED
+  add_library(shmemcli SHARED
     ShmemClient.cc
     XtcMonitorMsg.cc
     TransitionCache.cc
-)
+  )
 
-target_include_directories(shmemcli PUBLIC
+  target_include_directories(shmemcli PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
-)
+  )
 
-target_include_directories(shmemsrv PUBLIC
+  target_include_directories(shmemsrv PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
-)
+  )
 
-target_link_libraries(shmemcli
+  target_link_libraries(shmemcli
     xtcdata::xtc
     rt
-)
+  )
 
-target_link_libraries(shmemsrv
+  target_link_libraries(shmemsrv
     xtcdata::xtc
-)
+  )
 
-add_executable(shmemClient
+  add_executable(shmemClient
     shmemClientApp.cc
-)
-target_link_libraries(shmemClient
+  )
+
+  target_link_libraries(shmemClient
     xtcdata::xtc
     shmemcli
     rt
-)
+  )
 
-add_executable(shmemWriter
+  add_executable(shmemWriter
     shmemWriter.cc
-)
-target_link_libraries(shmemWriter
+  )
+
+  target_link_libraries(shmemWriter
     xtcdata::xtc
     shmemcli
     rt
-)
+  )
 
-add_executable(shmemServer
+  add_executable(shmemServer
     shmemServer.cc
-)
-target_link_libraries(shmemServer
+  )
+
+  target_link_libraries(shmemServer
     xtcdata::xtc
     shmemsrv
     rt
-)
+  )
 
-target_include_directories(shmemcli PUBLIC
+  target_include_directories(shmemcli PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
-)
+  )
 
-install(FILES
+  install(FILES
     ShmemClient.hh
     XtcMonitorServer.hh
     XtcMonitorMsg.hh
     DESTINATION include/psalg/shmem
-)
+  )
 
-install(TARGETS shmemcli
-  shmemClient shmemWriter
-  EXPORT psalgTargets
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin
-)
+  install(TARGETS shmemcli
+    shmemClient shmemWriter
+    EXPORT psalgTargets
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
+  )
 
-install(TARGETS shmemsrv
-  shmemServer
-  EXPORT psalgTargets
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin
-)
+  install(TARGETS shmemsrv
+    shmemServer
+    EXPORT psalgTargets
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
+  )
+else()
+  add_library(shmemcli SHARED
+    ShmemClientNoOp.cc
+  )
+
+  target_link_libraries(shmemcli
+    xtcdata::xtc
+  )
+
+  target_compile_options(shmemcli PRIVATE
+    -Wno-unused-private-field
+  )
+
+  add_executable(shmemClient
+    shmemClientApp.cc
+  )
+
+  target_link_libraries(shmemClient
+    xtcdata::xtc
+    shmemcli
+  )
+
+  target_include_directories(shmemcli PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
+  )
+
+  install(FILES
+    ShmemClient.hh
+    DESTINATION include/psalg/shmem
+  )
+
+  install(TARGETS shmemcli
+    shmemClient
+    EXPORT psalgTargets
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
+  )
+endif()
